# telegram-bot

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  github-ci.yml
app/: handler.py  kandinsky.py
services/: telegrambot.py
src/: Makefile  main.py  pyproject.toml
src/services/: handler.py  kandinsky.py
