[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Example telegram bot"
authors = ["etalipov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiogram = "^3.17.0"
types-requests = "^2.32.0.20241016"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
