[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "asyncio>=4.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

[tool.ruff]
line-length = 119
output-format = "grouped"
show-fixes = true
exclude = [".svn", "CVS", ".bzr", ".hg",".git", "__pycache__", ".tox", ".eggs", "*.egg", ".venv", "env", "venv", "build"]

[tool.ruff.lint]
select = ["W", "E", "F", "I", "N", "DJ", "T20", "Q"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 6
